plugins {
    id 'java'
}

compileJava   {
  sourceCompatibility = JavaVersion.VERSION_11
  targetCompatibility = JavaVersion.VERSION_11
}

repositories {
    mavenCentral()
//    maven { url 'https://jetbrains.bintray.com/intellij-third-party-dependencies' }
//    maven { url 'https://jetbrains.bintray.com/pty4j' }
//    maven { url 'https://jetbrains.bintray.com/jediterm' }
//    maven { url 'https://www.myget.org/F/rd-snapshots/maven' }
//    maven { url 'https://www.jetbrains.com/intellij-repository/releases' }
}

// todo: Rework the GDB Support to just use generic Intellij dependencies such as:
// com.jetbrains.intellij.platform:core and com.jetbrains.intellij.platform:lang
// so that there's no need to use 'org.jetbrains.intellij' plugin in this module
apply plugin: 'org.jetbrains.intellij'

// Disable all Gradle Tasks for the gradle-intellij-plugin as we only use the plugin for the dependencies
buildPlugin.enabled = false
buildSearchableOptions.enabled = false
downloadRobotServerPlugin.enabled = false
jarSearchableOptions.enabled = false
patchPluginXml.enabled = false
prepareSandbox.enabled = false
prepareTestingSandbox.enabled = false
prepareUiTestingSandbox.enabled = false
publishPlugin.enabled = false
runIde.enabled = false
runIdeForUiTests.enabled = false
runPluginVerifier.enabled = false
signPlugin.enabled = false
verifyPlugin.enabled = false

test.enabled = false // turn unit tests off for now until gradle-intellij-plugin is fixed

intellij {
    version = ideaVersion
}

dependencies {
//    compileOnly "com.jetbrains.intellij.platform:core:$intellijPlatformVersion"
//    compileOnly "com.jetbrains.intellij.platform:lang:$intellijPlatformVersion"

    //compileOnly "com.jetbrains.intellij.platform:java-debugger:$intellijPlatformVersion"
    //testImplementation group: 'junit', name: 'junit', version: '4.12'
}
